# wow-auction-predictor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: ingest_auctions.py
notebooks/: 01_api_exploration.ipynb
scripts/: init_postgres.sql
src/ingestion/: blizzard_client.py  snapshot_store.py
src/processing/: cleaner.py
src/utils/: config.py  db.py
tests/: test_ingestion.py  test_processing.py
